  manually cast to a type by using a cast function.

- Table ``information_schema.table_constraints`` is now returning
  ``constraint_name`` as type string instead of type array. Constraint type
  ``PRIMARY_KEY`` has been changed to ``PRIMARY KEY``. Also PRIMARY KEY
  constraint is not returned when not explicitly defined.

Changes
=======

- Added new "password" authentication method which is available for connections
  via the PostgreSQL wire protocol and HTTP. This method allows clients to
  authenticate using a valid database user and its password. For HTTP, the
  ``X-User`` header, used to provide a username, has been deprecated in favor
  of the standard HTTP ``Authorization`` header with the Basic Authentication
  Scheme.

- Added ``hyperloglog_distinct`` aggregation function. This is an
  enterprise-only feature.

- Added ``os['cpu']['used']`` column to ``sys.nodes`` table. This replaces the
  deprecated system/user/idle/stolen values.

- Subqueries which filter on primary key columns now have the same realtime
  semantics as the equivalent top-level queries.

- Added support to change the password of existing users using ``ALTER USER``.

- Added support for disabling the column store per ``STRING`` column on table
  creation and on adding columns. In conjunction with disabling indexing on that
  column, this will support storing strings greater than 32kb. Be aware that the
  performance of aggregations, groupings and sorting on such columns will decrease.

- Added support for ``ORDER BY``, ``GROUP BY`` and global aggregates on columns
  with disabled indexing (``INDEX OFF``).

- Added cgroup stats to ``sys.nodes``.

- Added the ``typtype`` column to ``pg_catalog.pg_type`` for better
  compatibility with certain postgres client libraries.

- Added support for scalar subqueries in DELETE and UPDATE statements.

- Introduced support for UNION ALL to produce the combined result of two or
  more queries, e.g.:

    SELECT id FROM t1
    UNION ALL